Make JAR normalization portable